# fastapi-tdd-docker

./: README.md  docker-compose.yml
project/: Dockerfile  pyproject.toml  requirements.txt
project/app/: db.py  main.py
project/app/api/: crud.py  summaries.py
project/tests/: conftest.py  test_summaries.py
